--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Opmaak.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Webdev les 5</title>
 </head>
 <body>
-<<<<<<< HEAD:Rollingstones.html
-
-=======
 <header class="outer-container">
     <div class="inner-container" id="hdr-mn">
         <nav class="header__navbar">
@@ -28,43 +25,36 @@
 <main>
     <section class="inner-container">
         <div class=intro>
-            <h2 class="intro-header">Rekupe is a digital agency in Los Angeles.
-                <br><br>
-                We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.
-                <br><br>
-                We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h2>
-            <br><br><br><br>
+            <h2 class="intro-header">Rekupe is a digital agency in Los Angeles.</h2>
+            <h2 class="intro-header">We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h2>
+            <h2 class="intro-header">We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h2>
             <p>Have a question? Click here to contact us!</p>
         </div>
     </section>
     <section>
         <article class="article-container">
-            <div class="article-left">
+            <div class="article-content">
                 <h2>Rolling Stone</h2>
-                You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon
+                <p>You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon</p>
             </div>
             <span class="img-right">
                 <img src="/Assets/work-image-01.jpeg" alt="image-laptop">
             </span>
         </article>
-    </section>
-    <section>
         <article class="article-container">
-            <div class=variety>
+            <div class=article-content>
                 <h2>Variety</h2>
-                Variety is an industry leader for breaking entertainment news, reviews and box office results with
-                archive of content dating back to 1905.
+                <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with
+                    archive of content dating back to 1905.</p>
             </div>
-            <span class="img-two">
+            <span class="img-left">
                   <img src="/Assets/work-image-02.jpeg" alt="image-book">
             </span>
         </article>
-    </section>
-    <section>
         <article class="article-container">
-            <div class="article-left">
+            <div class="article-content">
                 <h2>Worth</h2>
-                A global media platform connecting a community that embraces worth beyond wealth.
+                <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
             </div>
             <span class="img-right">
                 <img src="/Assets/work-image-03.jpeg" alt="image-tablet">
